--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <h1><center>Miruthul's First Webpage!</h1></center></h1>
+        <hr>
     </head>
     <body>
         <center>
@@ -8,22 +9,26 @@
         
         Now lets just get to know the different tags available for us in html!
         <p>This is a paragraph and its written inside a paragrapg tag and this can be used to wrote paragraph in a webpage</p>
-        <br>
+        <hr>
         <img src="miruthulimage.jpg" height="700">
+        <hr>
         <br>
         <a href="https://www.amazon.in/">Amazon</a>
+        <hr>
         <ol>
             <li>One</li>
             <li>Two</li>
             <li>Three</li>
         </ol>
+        <hr>
         <ul>
             <li>One</li>
             <li>Two</li>
             <li>Three</li>
         </ul>
-
-        
+        <hr>
+        <iframe src="https://webflow.com/made-in-webflow/website/webflow-scroll-snap" height="1000" width="1000"></iframe>
+        <hr>
         </center>
     </body>
 </html>
