--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,15 +5,16 @@
     </head>
     <body>
         <center>
-
-        
         Now lets just get to know the different tags available for us in html!
         <p>This is a paragraph and its written inside a paragrapg tag and this can be used to wrote paragraph in a webpage</p>
         <hr>
-        <img src="miruthulimage.jpg" height="700">
+        <img src="miruthulimage.jpg" height="500">
         <hr>
         <br>
-        <a href="https://www.amazon.in/">Amazon</a>
+        <a href="https://www.amazon.in/">Amazon</a><br>
+        <a href="https://www.Flipkart.com/">Flipkart</a><br>
+        <a href="https://www.ajio.com/">Ajio</a><br>
+        <a href="https://www.myntra.com/">Myntra</a><br>
         <hr>
         <ol>
             <li>One</li>
@@ -27,7 +28,7 @@
             <li>Three</li>
         </ul>
         <hr>
-        <iframe src="https://webflow.com/made-in-webflow/website/webflow-scroll-snap" height="1000" width="1000"></iframe>
+        <iframe src="https://webflow.com/made-in-webflow/website/webflow-scroll-snap" height="500" width="1000"></iframe>
         <hr>
         </center>
     </body>
