--- a/Event Management HTML Project/starter/event.html
+++ b/Event Management HTML Project/starter/event.html
@@ -4,24 +4,35 @@
         <title>Events</title>
         <link rel="icon" href="img/date.png">
     </head>
-    <body bgcolor="black" style="color: white;">
+    <body bgcolor="black" style="color: rgb(255, 255, 255);">
         <center>
         <h1>Upcoming Events 📅</h1>
         <h3>Don't Miss any of your important events. Here are the important events you have registered for !</h3>
         <hr>
         </center>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum scelerisque eros a lacinia. Cras nisl eros, tempor eu nisl nec, interdum ornare quam. Duis convallis, arcu in interdum consectetur, ipsum risus convallis tellus, et tincidunt sem ex quis libero. Fusce volutpat pellentesque nisi, in semper nunc elementum in. Suspendisse in varius tortor. Quisque in interdum massa, quis lacinia mauris. Cras scelerisque augue ac nibh malesuada, vel facilisis velit pharetra. Nullam aliquet diam eget ipsum malesuada auctor at non lorem. Donec nulla erat, efficitur id egestas non, ultricies sodales dui. Phasellus facilisis ex vitae velit volutpat, a rhoncus arcu tincidunt. Fusce maximus pharetra nisi eu euismod. Donec id velit mattis, sodales metus lacinia, finibus diam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus interdum scelerisque eros a lacinia. Cras nisl eros, 
+            tempor eu nisl nec, interdum ornare quam. Duis convallis, arcu in interdum consectetur, ipsum risus convallis tellus, et 
+            tincidunt sem ex quis libero. Fusce volutpat pellentesque nisi, in semper nunc elementum in. Suspendisse in varius tortor. 
+            Quisque in interdum massa, quis lacinia mauris. Cras scelerisque augue ac nibh malesuada, vel facilisis velit pharetra. Nullam 
+            aliquet diam eget ipsum malesuada auctor at non lorem. Donec nulla erat, efficitur id egestas non, ultricies sodales dui. 
+            Phasellus facilisis ex vitae velit volutpat, a rhoncus arcu tincidunt. Fusce maximus pharetra nisi eu euismod. Donec id 
+            velit mattis, sodales metus lacinia, finibus diam.</p>
         <center>
             <img src="img/event1.png">
             <h2>Photo Gallery Event</h2>
             <h3>Free Entry | Free Food | Pets are Not Allowed</h3>
-            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced b
+                elow for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" 
+                by Cicero are also reproduced in their exact original form, accompanied by English versions from the 
+                1914 translation by H. Rackham.</p>
             <img src="img/event2.png">
             <br>
             
             <h1><a href="https://www.ajio.com/">Fashion Store</a></h1>
             <h3>Free Entry | Free Food | Pets are Not Allowed</h3>
-            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 
+                1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by 
+                English versions from the 1914 translation by H. Rackham.</p>
             <hr>
             <h2>Contact</h2>
             <h2>+91 9150715137 | eventcollab@gmail.com</h2>
