--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,6 +31,55 @@
         <iframe src="https://webflow.com/made-in-webflow/website/webflow-scroll-snap" height="500" width="1000"></iframe>
         <hr>
         </center>
+
+        <center>
+      <br />
+      <h1>IPL TEAMS</h1>
+      <br />
+      <table border="1">
+        <tr>
+          <td>Name</td>
+          <td>Age</td>
+          <td>Team</td>
+        </tr>
+        <tr>
+          <td>Dhoni</td>
+          <td>41</td>
+          <td>Csk</td>
+        </tr>
+        <tr>
+          <td>Virat</td>
+          <td>34</td>
+          <td>RCB</td>
+        </tr>
+        <tr>
+          <td>KL Rahul</td>
+          <td>30</td>
+          <td>LSG</td>
+        </tr>
+      </table>
+    </center>
+
+    <hr>
+    
+
+    <form>
+        <table>
+            <tr>
+                <td>Name</td>
+                <td><input type="text"></td>
+            </tr>
+            <tr>
+                <td>Age</td>
+                <td><input type="number"></td>
+            </tr>
+            <tr><td><input type="submit"></td>
+            <td><input type="reset"></td></tr>
+        </table>
+    </form>
+
+
+
     </body>
 </html>
 
