--- a/EMC Web Page HTML Project/starter/register.html
+++ b/EMC Web Page HTML Project/starter/register.html
@@ -29,7 +29,9 @@
           </tr>
           <tr>
             <td>Gender:</td>
-            <td></td>
+              <td><input type="radio"name=Gender>Male
+              <input type="radio"name=Gender>Female
+            </td>
           </tr>
           <tr>
             <td>Email:</td>
@@ -47,7 +49,7 @@
           </tr>
           <tr>
             <td>Upload your Resume:</td>
-            <td></td>
+            <td><input type="file"></td>
           </tr>
           <tr>
             <td><input type="submit" /></td>
